Fix a bug in dark mode introduced in #98 (#100)
* Fix a bug in dark mode introduced in #98

* Remove all the other elements except the...

...background property.

--- a/components/algorithmsList/algorithmCard/style.module.css
+++ b/components/algorithmsList/algorithmCard/style.module.css
@@ -24,6 +24,14 @@
   pointer-events: none;
 }
 
+:global(.dark) .title::after {
+  background: linear-gradient(
+    90deg,
+    rgba(32, 40, 45, 0) 0%,
+    rgba(32, 40, 45, 1) 100%
+  );
+}
+
 .actions {
   justify-content: space-between;
 }
